<resources>
    <string name="app_name">Login</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_sign_in">Already have An Account? sign In</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_password">Enter Your Password</string>
</resources>